# basketball-computer-vision

./: .gitignore  README.md  RESTRUCTURING.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/Basketball-Players-17/: README.roboflow.txt  data.yaml
data/court-keypoints/: README.dataset.txt  README.roboflow.txt  data.yaml
docs/: PIPELINE.md  PRESENTATION_SCRIPT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.txt  TEAM_ASSIGNMENT.md
notebooks/: 01-data-exploration.ipynb  02-player-ball-detection.ipynb  03-court-keypoint-detection.ipynb  pipeline_runner.ipynb
runs/pose/train/: args.yaml
runs/pose/train2/: args.yaml
runs/pose/train3/: args.yaml
src/: __init__.py  ball_acquisition_detector.py  bbox_utils.py  homography.py  pipeline.py  tactical_view_converter.py  team_assigner.py  utils.py  video_utils.py
src/drawers/: __init__.py  ball_tracks_drawer.py  court_keypoints_drawer.py  frame_number_drawer.py  player_tracks_drawer.py  tactical_view_drawer.py  team_ball_control_drawer.py  utils.py
src/trackers/: __init__.py  ball_tracker.py  player_tracker.py
